--- a/Begin/Pages/Calendar.cshtml
+++ b/Begin/Pages/Calendar.cshtml
@@ -9,14 +9,13 @@
     @if (User.Identity.IsAuthenticated)
     {
         if (Model.Events != null && Model.Events.Any()) {
-            @* Add foreach statement here *@
+            @foreach (var evt in Model.Events)
+            {
 
-
-                 <div class="card" style="width: 50rem;">
+                <div class="card" style="width: 50rem;">
                     <div class="card-body">
                         <h5 class="card-title">
-                            @* Add event subject here *@
-   
+                            @evt.Subject
                         </h5>
                         <p class="card-text">
                             <div class="container">
@@ -25,17 +24,15 @@
                                         <strong>Start:</strong>
                                     </div>
                                     <div class="col">
-                                        @* Add event start date/time here *@
-
+                                        @Model.FormatDateTimeTimeZone(evt.Start)
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-2">
-                                         <strong>End:</strong>
+                                        <strong>End:</strong>
                                     </div>
                                     <div class="col">
-                                        @* Add event end date/time here *@
-
+                                        @Model.FormatDateTimeTimeZone(evt.End)
                                     </div>
                                 </div>
                             </div>
@@ -43,8 +40,7 @@
                     </div>
                 </div>
                 <br />
-            @* Add foreach closing bracket here *@
-
+            }
         }
         else {
             <div>No calendar events found</div>
